--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Americans -- Italy -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'Uncles -- Juvenile fiction'
+- GITenberg
 title: Among the Brigands
 url: http://www.gutenberg.org/ebooks/29297
